# Agent-Security-Guard

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  guard.yaml  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: INSTALLATION.md
plugin/: __init__.py  plugin.yaml
security/agent-security-guard/: SKILL.md  conftest.py
security/agent-security-guard/references/: architecture.md  self-modification.md  threat-model.md
security/agent-security-guard/src/agent_security_guard/: __init__.py  __main__.py  _miniyaml.py  action_guard.py  actions.py  adapter.py  audit.py  envelope.py  memory_bridge.py  patterns.py  policy.py  scanner.py  scope.py  self_improvement.py  sequence_guard.py  types.py  wrapper.py
security/agent-security-guard/tests/: test_action_guard.py  test_actions.py  test_adapter.py  test_audit.py  test_cli.py  test_envelope.py  test_memory_bridge.py  test_miniyaml.py  test_plugin.py  test_policy.py  test_scanner.py  test_scope.py  test_self_improvement_e2e.py  test_self_modification.py  test_sequence_guard.py  test_threat_regression.py  test_wrapper.py
security/agent-security-guard/tests/fixtures/: injection_corpus.json
